fixed container overflow from hidden to auto

--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,6 @@
     padding: 5%;
     padding-top: 10%;
     margin: 0;
-    overflow-x: hidden;
 }
 
 .total {
